[ADD] local auth (step 3)
