# lib/db/api.js
@@ -12,6 +12,7 @@ var dbapi = Object.create(null)
 
 const uuid = require('uuid')
 const apiutil = require('../util/apiutil')
+const bcryptutil = require('../util/bcryptutil')
 const Promise = require('bluebird')
 const _ = require('lodash')
 
@@ -137,6 +138,7 @@ dbapi.createBootStrap = function(env) {
         name: group.owner.name
       , email: group.owner.email
       , ip: '127.0.0.1'
+      , password: env.STF_ADMIN_PASSWORD
       })
       .then(function() {
         return updateUsersForMigration(group)
@@ -940,12 +942,13 @@ dbapi.deleteUserGroup = function(id) {
   })
 }
 
-dbapi.createUser = function(email, name, ip) {
+dbapi.createUser = function(email, name, ip, password) {
   return dbapi.getRootGroup().then(function(group) {
     return dbapi.loadUser(group.owner.email).then(function(adminUser) {
       return db.run(r.table('users').insert({
         email: email
       , name: name
+      , password: bcryptutil.hash(password || name)
       , ip: ip
       , group: wireutil.makePrivateChannel()
       , lastLoggedInAt: r.now()
@@ -1001,7 +1004,7 @@ dbapi.saveUserAfterLogin = function(user) {
     }))
     .then(function(stats) {
       if (stats.skipped) {
-        return dbapi.createUser(user.email, user.name, user.ip)
+        return dbapi.createUser(user.email, user.name, user.ip, user.password)
       }
       return stats
     })
