# lib/units/api/controllers/users.js
@@ -262,8 +262,9 @@ function getUsers(req, res) {
 function createUser(req, res) {
   const email = req.swagger.params.email.value
   const name = req.swagger.params.name.value
+  const password = req.swagger.params.password.value
 
-  dbapi.createUser(email, name, req.user.ip).then(function(stats) {
+  dbapi.createUser(email, name, req.user.ip, password).then(function(stats) {
     if (!stats.inserted) {
       apiutil.respond(res, 403, 'Forbidden (user already exists)')
     }
